# app.js
@@ -8,11 +8,12 @@ const logger = require("morgan");
 require('dotenv').config();
 
 
+const authRouter = require("./routes/auth");
 const indexRouter = require("./routes/index");
 const usersRouter = require("./routes/users");
-const productsRouter = require("./routes/products");
 const adminRouter = require("./routes/admin");
-const authRouter = require("./routes/auth");
+const productsRouter = require("./routes/products");
+const orderRoutes = require('./routes/orders');
 
 const app = express();
 
@@ -33,9 +34,10 @@ app.use(cookieParser());
 app.use(express.static(path.join(__dirname, "public")));
 
 app.use("/", indexRouter);
+app.use("/login", authRouter);
 app.use("/users", usersRouter);
 app.use("/admin", adminRouter);
-app.use("/login", authRouter);
+app.use('/orders', orderRoutes);
 app.use("/products", productsRouter);
 
 // catch 404 and forward to error handler
